; ModuleID = '/home/carl/AnghaBench/rofi/source/extr_rofi.c_rofi_collect_modi_dir.c'
source_filename = "/home/carl/AnghaBench/rofi/source/extr_rofi.c_rofi_collect_modi_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32* }

@G_MODULE_SUFFIX = common dso_local global i32 0, align 4
@G_MODULE_BIND_LAZY = common dso_local global i32 0, align 4
@G_MODULE_BIND_LOCAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"mode\00", align 1
@ABI_VERSION = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [65 x i8] c"ABI version of plugin: '%s' does not match: %08X expecting: %08X\00", align 1
@.str.2 = private unnamed_addr constant [38 x i8] c"Symbol 'mode' not found in module: %s\00", align 1
@.str.3 = private unnamed_addr constant [46 x i8] c"Failed to open 'mode' plugin: '%s', error: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @rofi_collect_modi_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rofi_collect_modi_dir(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i32* @g_dir_open(i8* %8, i32 0, i32* null)
  store i32* %9, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %82

12:                                               ; preds = %1
  store i8* null, i8** %4, align 8
  br label %13

13:                                               ; preds = %76, %22, %12
  %14 = load i32*, i32** %3, align 8
  %15 = call i8* @g_dir_read_name(i32* %14)
  store i8* %15, i8** %4, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %79

17:                                               ; preds = %13
  %18 = load i8*, i8** %4, align 8
  %19 = load i32, i32* @G_MODULE_SUFFIX, align 4
  %20 = call i32 @g_str_has_suffix(i8* %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %17
  br label %13

23:                                               ; preds = %17
  %24 = load i8*, i8** %2, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = call i8* @g_build_filename(i8* %24, i8* %25, i32* null)
  store i8* %26, i8** %5, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = load i32, i32* @G_MODULE_BIND_LAZY, align 4
  %29 = load i32, i32* @G_MODULE_BIND_LOCAL, align 4
  %30 = or i32 %28, %29
  %31 = call i32* @g_module_open(i8* %27, i32 %30)
  store i32* %31, i32** %6, align 8
  %32 = load i32*, i32** %6, align 8
  %33 = icmp ne i32* %32, null
  br i1 %33, label %34, label %72

34:                                               ; preds = %23
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %7, align 8
  %35 = load i32*, i32** %6, align 8
  %36 = bitcast %struct.TYPE_3__** %7 to i32*
  %37 = call i64 @g_module_symbol(i32* %35, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %66

39:                                               ; preds = %34
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* @ABI_VERSION, align 8
  %44 = icmp ne i64 %42, %43
  br i1 %44, label %45, label %54

45:                                               ; preds = %39
  %46 = load i8*, i8** %4, align 8
  %47 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %48 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = load i64, i64* @ABI_VERSION, align 8
  %51 = call i32 (i8*, i8*, ...) @g_warning(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.1, i64 0, i64 0), i8* %46, i64 %49, i64 %50)
  %52 = load i32*, i32** %6, align 8
  %53 = call i32 @g_module_close(i32* %52)
  br label %65

54:                                               ; preds = %39
  %55 = load i32*, i32** %6, align 8
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 1
  store i32* %55, i32** %57, align 8
  %58 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %59 = call i32 @rofi_collect_modi_add(%struct.TYPE_3__* %58)
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %64, label %61

61:                                               ; preds = %54
  %62 = load i32*, i32** %6, align 8
  %63 = call i32 @g_module_close(i32* %62)
  br label %64

64:                                               ; preds = %61, %54
  br label %65

65:                                               ; preds = %64, %45
  br label %71

66:                                               ; preds = %34
  %67 = load i8*, i8** %4, align 8
  %68 = call i32 (i8*, i8*, ...) @g_warning(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0), i8* %67)
  %69 = load i32*, i32** %6, align 8
  %70 = call i32 @g_module_close(i32* %69)
  br label %71

71:                                               ; preds = %66, %65
  br label %76

72:                                               ; preds = %23
  %73 = load i8*, i8** %4, align 8
  %74 = call i32 (...) @g_module_error()
  %75 = call i32 (i8*, i8*, ...) @g_warning(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.3, i64 0, i64 0), i8* %73, i32 %74)
  br label %76

76:                                               ; preds = %72, %71
  %77 = load i8*, i8** %5, align 8
  %78 = call i32 @g_free(i8* %77)
  br label %13

79:                                               ; preds = %13
  %80 = load i32*, i32** %3, align 8
  %81 = call i32 @g_dir_close(i32* %80)
  br label %82

82:                                               ; preds = %79, %1
  ret void
}

declare dso_local i32* @g_dir_open(i8*, i32, i32*) #1

declare dso_local i8* @g_dir_read_name(i32*) #1

declare dso_local i32 @g_str_has_suffix(i8*, i32) #1

declare dso_local i8* @g_build_filename(i8*, i8*, i32*) #1

declare dso_local i32* @g_module_open(i8*, i32) #1

declare dso_local i64 @g_module_symbol(i32*, i8*, i32*) #1

declare dso_local i32 @g_warning(i8*, i8*, ...) #1

declare dso_local i32 @g_module_close(i32*) #1

declare dso_local i32 @rofi_collect_modi_add(%struct.TYPE_3__*) #1

declare dso_local i32 @g_module_error(...) #1

declare dso_local i32 @g_free(i8*) #1

declare dso_local i32 @g_dir_close(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
